# blocks

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: AddSources.cmake  PS2Toolchain.cmake  PS2_toolchain.cmake
data/: CMakeLists.txt
data/html/: shell.html  tetris.css  tetris.html
src/: CMakeLists.txt  draw.c  draw.h  draw_game.c  draw_game.h  game.c  game.h  generic_renderer.c  generic_renderer.h  main.c  platform.h  renderer.h  resource.h
src/platform/: CMakeLists.txt  generic_renderer.c  generic_renderer.h  platform.h  renderer.h
src/platform/PS2/: CMakeLists.txt  ps2_platform.c  stdint.h
src/platform/SDL2/: CMakeLists.txt  sdl2_platform.c
tools/: createfont.py  createtiles.py
